<resources>
    <string name="app_name">Wordsearch Solver</string>
    <string name="title_load">Load</string>
    <string name="title_solve">Solve</string>
    <string name="title_solutions">Solutions</string>
    <string name="subtitle_load_wordsearch">Load Wordsearch</string>
    <string name="load_wordsearch_photo_button_text">Load From Saved Photo</string>
    <string name="load_wordsearch_camera_button_text">Load Using Camera</string>
    <string name="subtitle_load_words">Load Words</string>
    <string name="subtitle_loaded_words">Loaded Words</string>
    <string name="words_text_entry_hint">E.g. cat, dog, hippo</string>
    <string name="subtitle_loaded_wordsearch">Loaded Wordsearch</string>
    <string name="wordsearch_text_entry_hint">Wordsearch grid will be displayed here once loaded</string>
    <string name="save_wordsearch_button">Save Wordsearch</string>
    <string name="save_words_button">Save Words</string>
    <string name="wordsearch_saved_text">Latest wordsearch saved!</string>
    <string name="wordsearch_unsaved_text">Latest wordsearch NOT saved!</string>
    <string name="words_saved_text">Latest word list saved!</string>
    <string name="words_unsaved_text">Latest word list NOT saved!</string>
    <string name="solve_heading">Solve Wordsearch</string>
    <string name="solve_tip_text">Make sure the wordsearch and word list are correct and saved before solving!</string>
    <string name="solve_button_text">Solve Wordsearch</string>
    <string name="must_be_saved_text">Wordsearch and word list must be present and saved before solving!</string>
    <string name="solution_heading">Wordsearch Solution</string>
    <string name="save_solution_button">Save Solution</string>
    <string name="subtitle_saved_solutions">Saved Solutions</string>
    <string name="table_title_solution">Solutions</string>
    <string name="table_title_load">Load</string>
    <string name="table_title_delete">Delete</string>
    <string name="subtitle_loaded_solution">Loaded Solution</string>
    <string name="loaded_words_text">Loaded words and locations will appear here once loaded</string>
    <string name="no_solutions_saved">No solutions have been saved!</string>
    <string name="table_title_word">Word</string>
    <string name="table_title_location">Location</string>
    <string name="table_title_highlight">Highlight</string>
</resources>
