<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loadScrollContainer"
    android:paddingBottom="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/containerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutSolutions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|top"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/saved_solutions_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/subtitle_saved_solutions"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/savedSolutionsGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="false"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/solutionNameHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/table_title_solution"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/loadSolutionHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/table_title_load"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deleteSolutionHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/table_title_delete"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLoadedSolution"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutSolutions"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/loaded_solution_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/subtitle_loaded_solution"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/loadedWordsearchGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="false"
                android:stretchColumns="*" />

            <EditText
                android:id="@+id/solvedWordsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="solvedWords"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/loaded_words_text"
                android:inputType="textMultiLine" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>